bitnami/monitoring/monitoring-bitnami/kpt/grafana-loki/gossip-ring-headless-service.yaml
---
# Source: helm/charts/grafana-loki/templates/gossip-ring-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-grafana-loki-gossip-ring
  namespace: "monitoring"
  labels:
    app.kubernetes.io/name: grafana-loki
    helm.sh/chart: grafana-loki-2.5.6
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: grafana-loki
    app.kubernetes.io/component: loki
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  clusterIP: None
  ports:
    - name: http
      port: 7946
      targetPort: http-memberlist
      protocol: TCP
  selector:
    app.kubernetes.io/name: grafana-loki
    app.kubernetes.io/instance: monitoring
    loki-gossip-member: "true"
