bitnami/monitoring/monitoring-bitnami/kpt/grafana-loki/ingress.yaml
# Source: monitoring/charts/loki/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-loki
  namespace: monitoring
  labels:
    app: loki
    chart: loki-2.10.1
    release: monitoring
    heritage: Helm
    cert-promoter: pending
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-selfsigned" # {"$kpt-set":"cert-issuer"}
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "cilium"
    acme.cert-manager.io/http01-edit-in-place: "true"
    traefik.ingress.kubernetes.io/router.middlewares: monitoring-loki-basic-auth@kubernetescrd
spec:
  #ingressClassName: "cilium"
  tls:
  - hosts:
    - "loki.local.ertia.cloud" # {"$kpt-set":"loki-domain"}
    secretName: loki-tls
  rules:
  - host: "loki.local.ertia.cloud" # {"$kpt-set":"loki-domain"}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-loki-gateway
            port:
              number: 80
  - host: "loki.local.ertia.cloud" # {"$kpt-set":"loki-domain"}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: monitoring-loki-gateway
            port:
              number: 80
